--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@
 version: 0.2
 phases:
   install:
+    runtime-versions:
+      nodejs: 14
     commands:
       - echo "install step"
       - npm ci
