--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chroma-js": "^2.4.2",
     "d3": "^7.4.4",
     "d3-sankey": "^0.12.3",
+    "html-to-image": "^1.9.0",
     "jsonpath": "^1.1.1",
     "moment": "^2.29.3",
     "react": "^18.1.0",
